Add auth local
